FIX: No scroll should be visible when Task Comments list empty

--- a/app/assets/stylesheets/activities_tasks.css.scss
+++ b/app/assets/stylesheets/activities_tasks.css.scss
@@ -431,6 +431,7 @@ $border-breaker-width: 10px;
 
 .task-comments-container {
   max-height: 250px;
+  min-height: 50px;
   overflow-y: auto;
 }
 
